src/objects/IBB_Product__c.object
<CustomObject>
    <fields>
        <fullName>Rent_Review_3__c</fullName>
        <description>Lending products are subject to rental reviews. Rental rates are currently reviewed up to a maximum of four times per annum. The rent review fields indicate in which months of the year the rental review is carried out.</description>
        <label>Rent Review 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rent_or_occupancy__c</fullName>
        <description>For use on MMR letters</description>
        <inlineHelpText>For use on MMR letters</inlineHelpText>
        <label>Rent or occupancy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>rent</fullName>
                </value>
                <value>
                    <fullName>occupancy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rent_review__c</fullName>
        <description>Used to hold information about asset products</description>
        <label>Rent review</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rental_Rate_BTL_Afford__c</fullName>
        <description>Used for BTL affordability calculation if rate changes but assessment criteria doesn&apos;t</description>
        <inlineHelpText>Used for BTL affordability calculation if rate changes but assessment criteria doesn&apos;t</inlineHelpText>
        <label>Rental Rate BTL Affordability</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rental_Rate_Type__c</fullName>
        <label>Rental Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Repay_IBB_Customer_legal_contribution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Where a customer settles the account within a period where an early payment charge applies, if IBB have either paid for, or contributed towards the customers legal fees, this field indicates whether that contribution should be repaid by the customer</description>
        <label>Repay IBB Customer legal contribution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Repay_IBB_own_legal_fee_contribution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Where a customer settles the account within a period where an early payment charge applies if IBB have either paid for, or contributed towards IBB&apos;s own legal fees, this field indicates whether that contribution should be repaid by the customer</description>
        <label>Repay IBB own legal fee contribution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Repay_IBB_valuation_contribution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Where a customer settles the account within a period where an early payment charge applies if IBB have either paid for, or contributed towards the customers valuation fee, this field indicates whether that contribution should be repaid by the customer</description>
        <label>Repay IBB valuation contribution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Repay_cashback__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Where a customer settles the account within a period where an early payment charge applies if the product offered a cashback amount, this field indicates whether that cashback should be repaid by the customer</description>
        <label>Repay cashback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Repayment_duration_1__c</fullName>
        <label>Repayment duration 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed date</fullName>
                </value>
                <value>
                    <fullName>12 months</fullName>
                </value>
                <value>
                    <fullName>18 months</fullName>
                </value>
                <value>
                    <fullName>24 months</fullName>
                </value>
                <value>
                    <fullName>36 months</fullName>
                </value>
                <value>
                    <fullName>48 months</fullName>
                </value>
                <value>
                    <fullName>60 months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Repayment_duration_2__c</fullName>
        <label>Repayment duration 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed date</fullName>
                </value>
                <value>
                    <fullName>12 months</fullName>
                </value>
                <value>
                    <fullName>18 months</fullName>
                </value>
                <value>
                    <fullName>24 months</fullName>
                </value>
                <value>
                    <fullName>36 months</fullName>
                </value>
                <value>
                    <fullName>48 months</fullName>
                </value>
                <value>
                    <fullName>60 months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Repayment_duration_3__c</fullName>
        <label>Repayment duration 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed date</fullName>
                </value>
                <value>
                    <fullName>12 months</fullName>
                </value>
                <value>
                    <fullName>18 months</fullName>
                </value>
                <value>
                    <fullName>24 months</fullName>
                </value>
                <value>
                    <fullName>36 months</fullName>
                </value>
                <value>
                    <fullName>48 months</fullName>
                </value>
                <value>
                    <fullName>60 months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Repayment_end_date_1__c</fullName>
        <label>Repayment end date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Repayment_end_date_2__c</fullName>
        <label>Repayment end date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Repayment_end_date_3__c</fullName>
        <label>Repayment end date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revert_Rate_Benchmark_Rate__c</fullName>
        <label>Revert Rate Benchmark Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Revert_Rate_Benchmark__c</fullName>
        <label>Revert Rate Benchmark</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BBR</fullName>
                    <default>true</default>
                    <label>BBR</label>
                </value>
                <value>
                    <fullName>LIBOR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Features_Document__c</fullName>
        <label>Risk Features Document</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Product_Name__c</fullName>
        <label>Short  Product Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShowOnAIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ShowOnAIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShowOnProductSwitch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ShowOnProductSwitch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_On_Liabilities_External__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show On Liabilities External</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_On_Liabilities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show On Liabilities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Staff_Only_Product__c</fullName>
        <label>Staff Only Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Statement_Frequency_Details__c</fullName>
        <label>Statement Frequency Details</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Statement_frequency__c</fullName>
        <label>Statement frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Terms_Months_Number__c</fullName>
        <formula>Value(Text(FTD_Term_Months__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Terms Months Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Product__c</fullName>
        <label>Type of Product</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category_of_Product__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>60 Day Notice Savings Account</fullName>
                </value>
                <value>
                    <fullName>Current Account</fullName>
                </value>
                <value>
                    <fullName>Fixed Term Savings Account</fullName>
                </value>
                <value>
                    <fullName>Home Purchase Plan</fullName>
                </value>
                <value>
                    <fullName>BTL Purchase Plan</fullName>
                </value>
                <value>
                    <fullName>Home Purchase Plan Premier</fullName>
                </value>
                <value>
                    <fullName>On Demand Notice Savings Account</fullName>
                </value>
                <value>
                    <fullName>Wakala Treasury</fullName>
                </value>
                <value>
                    <fullName>Young Persons Savings Account</fullName>
                </value>
                <value>
                    <fullName>Commercial Property Finance</fullName>
                </value>
                <value>
                    <fullName>120 Day Notice Savings Account</fullName>
                </value>
                <value>
                    <fullName>Young Person&apos;s Notice Savings Account</fullName>
                </value>
                <value>
                    <fullName>90 Day Notice account</fullName>
                </value>
                <value>
                    <fullName>Home Purchase Scotland</fullName>
                </value>
                <value>
                    <fullName>Notice Cash ISA</fullName>
                </value>
                <value>
                    <fullName>Instant Access Cash ISA</fullName>
                </value>
                <value>
                    <fullName>12 Month Fixed Term Deposit ISA</fullName>
                </value>
                <value>
                    <fullName>Charities 100 Day Notice Account</fullName>
                </value>
                <value>
                    <fullName>Buy To Let Purchase Plan Scotland</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_product_for_solicitor_letter__c</fullName>
        <inlineHelpText>Please select from the drop down. This is for use in the offer letters.</inlineHelpText>
        <label>Type of product for solicitor letter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HPP</fullName>
                </value>
                <value>
                    <fullName>BTL</fullName>
                </value>
                <value>
                    <fullName>HPPP</fullName>
                </value>
                <value>
                    <fullName>BTL Rent Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valuation_Contribution_Amount__c</fullName>
        <label>Valuation Contribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valuation_Type__c</fullName>
        <label>Valuation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Waived</fullName>
                </value>
                <value>
                    <fullName>Discounted</fullName>
                </value>
                <value>
                    <fullName>Full Valuation Required</fullName>
                </value>
                <value>
                    <fullName>Refunded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valuation_fee_amount_paid__c</fullName>
        <label>Valuation fee amount paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valuation_fee_paid_by__c</fullName>
        <label>Valuation fee paid by</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Bank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_of_IBB_legal_fees__c</fullName>
        <label>Value of IBB legal fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_of_customer_legal_fee__c</fullName>
        <label>Value of customer legal fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Variable_product_benchmark__c</fullName>
        <label>Variable product benchmark</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BBR</fullName>
                </value>
                <value>
                    <fullName>Liable</fullName>
                </value>
                <value>
                    <fullName>Variable rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warning_Clause_Offer_Letter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For use with HPP CAA offer letters</description>
        <inlineHelpText>Select full amortisation warning or partial/no warning for BRO. Search for FULL or BRO.</inlineHelpText>
        <label>Warning Clause Offer Letter</label>
        <referenceTo>Standard_Clause__c</referenceTo>
        <relationshipName>IBB_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Where_does_product_revert_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Where does product revert to</label>
        <referenceTo>IBB_Product__c</referenceTo>
        <relationshipName>IBB_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X5_Year_NPV__c</fullName>
        <label>5 Year NPV</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_1_Value__c</fullName>
        <label>Year 1 Value</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>expiry_date_of_fixed_product__c</fullName>
        <label>Expiry date of fixed/discount rate</label>
        <type>Date</type>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>Active_Liabilities_Products</fullName>
        <columns>NAME</columns>
        <columns>Product_code__c</columns>
        <columns>Allow_card_payment_CAA__c</columns>
        <columns>ProductEventDirector__c</columns>
        <columns>Profit_rate_for_letter__c</columns>
        <columns>Profit_Rate__c</columns>
        <columns>Compounded_profit_rate__c</columns>
        <columns>Conga_Signature_Required_Letter__c</columns>
        <columns>Conga_Liability_App_1_CAA__c</columns>
        <columns>Conga_Liability_App_2_CAA__c</columns>
        <columns>Conga_Liability_App_3_CAA__c</columns>
        <columns>FTD_Term_Months__c</columns>
        <columns>Show_On_Liabilities__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IBB_Product__c.IBB_Liabilities_Product</value>
        </filters>
        <filters>
            <field>Show_On_Liabilities__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Liabilities Products</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Rental_Rate_BTL_Afford__c</columns>
        <columns>Profit_Rate__c</columns>
        <columns>ShowOnAIP__c</columns>
        <columns>ProductEventDirector__c</columns>
        <columns>Maxiumum_FTI__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Conga_Offer_Letter__c</columns>
        <columns>CongaOfferLetterRefinance__c</columns>
        <columns>Warning_Clause_Offer_Letter__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Business_Products</fullName>
        <columns>NAME</columns>
        <columns>Limited_Company_App_Form__c</columns>
        <columns>Liability_Welcome_Letter__c</columns>
        <columns>Liability_Welcome_Letter_Post__c</columns>
        <columns>Product_code__c</columns>
        <columns>EBS_Deal_Account_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IBB_Product_Set__c</field>
            <operation>contains</operation>
            <value>business</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IBB_Product__c.IBB_Liabilities_Product</value>
        </filters>
        <label>Business Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>HPP_CAA_Products</fullName>
        <columns>Type_of_Product__c</columns>
        <columns>Conga_FIS__c</columns>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Conga_Offer_Letter__c</columns>
        <columns>CongaOfferLetterRefinance__c</columns>
        <columns>Rental_Rate_BTL_Afford__c</columns>
        <columns>ShowOnAIP__c</columns>
        <columns>ShowOnProductSwitch__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Fixed_or_Discounted__c</columns>
        <columns>Discounted_product_expiry_date__c</columns>
        <columns>Fixed_product_expiry__c</columns>
        <columns>expiry_date_of_fixed_product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ShowOnAIP__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IBB_Product__c.IBB_Asset_Product</value>
        </filters>
        <label>Current HPP CAA Products</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HPP_Products_Oct_2016</fullName>
        <columns>NAME</columns>
        <columns>Marketing_product_code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Marketing_product_code__c</field>
            <operation>contains</operation>
            <value>1016</value>
        </filters>
        <label>HPP Products Oct 2016</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Live_BTL_Products</fullName>
        <columns>Type_of_Product__c</columns>
        <columns>NAME</columns>
        <columns>Product_code__c</columns>
        <columns>Product_expiry_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ShowOnAIP__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IBB_Product__c.IBB_Asset_Product</value>
        </filters>
        <filters>
            <field>Type_of_Product__c</field>
            <operation>equals</operation>
            <value>BTL Purchase Plan,Buy To Let Purchase Plan Scotland</value>
        </filters>
        <label>Live BTL Products</label>
        <language>en_US</language>
        <sharedTo>
            <role>BusinessAnalyst</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>New_Products_Jan_2015</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Conga_Offer_Letter__c</columns>
        <columns>CongaOfferLetterRefinance__c</columns>
        <columns>Rate_Type__c</columns>
        <columns>Warning_Clause_Offer_Letter__c</columns>
        <columns>Fixed_product_expiry__c</columns>
        <columns>Discounted_product_expiry_date__c</columns>
        <columns>Fixed_or_Discounted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>31/12/2016</value>
        </filters>
        <label>New Products Jan 2015</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Product_Switch</fullName>
        <columns>NAME</columns>
        <columns>IBB_Product_Set__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ShowOnProductSwitch__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Product Switch</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <recordTypes>
        <fullName>ANC</fullName>
        <active>true</active>
        <description>Anc</description>
        <label>ANC</label>
    </recordTypes>
    <recordTypes>
        <fullName>IBB_Asset_Product</fullName>
        <active>true</active>
        <label>IBB Asset Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>IBB_Liabilities_Product</fullName>
        <active>true</active>
        <label>IBB Liabilities Product</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>